--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -58,4 +58,13 @@
                   android:gravity="bottom" android:id="@+id/linearLayout6">
         <Button android:text="@string/reset" android:id="@+id/resetButton" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
     </LinearLayout>
+    <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent"
+                  android:gravity="bottom" android:id="@+id/linearLayout7">
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:layout_width="match_parent"
+                 android:id="@+id/progressBar"
+                 style="@android:style/Widget.ProgressBar.Horizontal"
+                 android:layout_height="match_parent">
+    </ProgressBar>
+    </LinearLayout>
 </LinearLayout>
